# SSNClust

./: .dockerignore  .gitignore  Dockerfile  Jaccard.md  Parallelization.md  README.md  cluster900.graphml  cluster999_2.graphml  compare.py  install.sh  main.py  my_ssn.graphml  ortholog_refine.py  pyproject.toml  requirements.txt  run_best_plan.py  stats_tsv.py
examples/: cluster_500.tsv  cluster_999.tsv  cluster_999_3.tsv
ssnclust/: analyzer.py  generator.py  orthology.py  utils.py
ssnclust/clustering/: leiden_alg.py  mcl_wrapper.py  nmf_clust.py  sbm_model.py  spectral.py
